Fix scrollbar flashing first time opening add to basket popover from PLAY presentation. Change add to basket popover so the products shown are persistent, even when the current timing changes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -67,6 +67,7 @@ html,
     width: 100%;
     min-width: 100vw;
     background: $bg;
+    overflow: hidden;
 }
 // Headers
 h1,
